ProFIT/objects/Location__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <description>Displays the city location</description>
        <inlineHelpText>Enter the name of the city</inlineHelpText>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Displays the country location</description>
        <inlineHelpText>Choose the location of country</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Landmark__c</fullName>
        <description>Shows the landmark for the location</description>
        <inlineHelpText>Enter the landmark for the location</inlineHelpText>
        <label>Landmark</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <description>Displays the the postal code of the location</description>
        <inlineHelpText>Enter the postal code of the location</inlineHelpText>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Displays the state location</description>
        <inlineHelpText>Enter the name of the state</inlineHelpText>
        <label>State</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <description>Displays the name of the street.</description>
        <inlineHelpText>Enter the name of the street</inlineHelpText>
        <label>Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if the location entered is verified or not</description>
        <inlineHelpText>Check this if the location is verified</inlineHelpText>
        <label>Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checks if the zip entered is verified</description>
        <inlineHelpText>Check this if the zip is verified</inlineHelpText>
        <label>Zip Verified</label>
        <type>Checkbox</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>